# mini-rust

./: Cargo.toml  LICENSE  README.md  ROADMAP.md  TODO.md  run_example.sh  run_hello_world.sh
.githooks/: pre-commit
.github/workflows/: rust.yml
examples/: .gitignore  box.mrs  cmp.mrs  example.mrs  example.rs  functools.mrs  hello_world.mrs  iter.mrs  mem.mrs  ops.mrs  option.mrs  stdlib.ll  vec.mrs
side/pattern/: Cargo.toml  README.md
src/: ast.rs  ast_lowering.rs  ast_parsing.rs  ast_to_hlr.rs  context.rs  ctxt.rs  driver.rs  function_registry.rs  functions.rs  generate.rs  h2m.rs  hlr.rs  hlr2mlr.rs  hlr_lowering.rs  lib.rs  m2inkwell.rs  main.rs  mlr.rs  mlr_lowering.rs  mutck.rs  obligation_check.rs  parse.rs  parser.rs  traitchecker.rs  type_registry.rs  typechecker.rs  typeck.rs  util.rs
src/ast/: build.rs  builder.rs  defs.rs  lexer.rs
src/ast_lowering/: closure_util.rs  err.rs  lowered.rs  macros.rs  match_.rs  match_util.rs  ops.rs  opt.rs  resolve_util.rs
src/ast_parsing/: lexer.rs  macros.rs
src/ast_to_hlr/: resolve_util.rs
src/context/: function_registry.rs  functions.rs  type_registry.rs  types.rs
src/ctxt/: fn_reg.rs  fns.rs  function_registry.rs  functions.rs  impl_check.rs  impl_reg.rs  impls.rs  language_items.rs  mlr.rs  trait_reg.rs  traits.rs  ty.rs  ty_match.rs  ty_reg.rs  type_registry.rs  types.rs
src/driver/: constraints.rs  err.rs  generate.rs  impl_check.rs  stdlib.rs  trait_check.rs  ty_annots.rs
src/generate/: fns.rs
stdlib/: cmp.mrs  iter.mrs  mem.mrs  num.mrs  ops.mrs  option.mrs  panic.mrs  range.mrs  vec.mrs
(+58 files in other folders)
