[package]
name = "mini-rust"
version = "0.1.0"
edition = "2024"

[features]
default = ["hlr"]
hlr = []

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
inkwell = { version = "0.7.0", features = ["llvm21-1"] }
itertools = "0.14.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
